Fix code overflow in course detail

--- a/src/styles/prism.css
+++ b/src/styles/prism.css
@@ -10,7 +10,6 @@
 	-o-tab-size: 4;
 	tab-size: 4;
 	-webkit-hyphens: none;
-	-moz-hyphens: none;
 	-ms-hyphens: none;
 	hyphens: none;
 }
@@ -28,6 +27,7 @@
 	padding: 0;
 	font-size: .9em;
 	background-color: rgba(255, 255, 255, 0) !important;
+	white-space: pre-wrap;
 }
 
 .markdown-body :not(pre) > code {
